--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     Yahallo
     <img src="image/Fr2tvc3XwAAjFGW.jpg" alt="">
-    <script src="03-control-flujo/10-switch.js"></script>
+    <!-- ejecuta la ruta que quieras ver -->
+    <script src="05-objetos/09-list-props.js"></script> 
 </body>
 </html>
